objects/Article__c.object
<CustomObject>
    <description>Article primary object.</description>
    <fields>
        <fullName>Access_Rights__c</fullName>
        <label>Access Rights</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Use this section to provide any additional information you may want to convey to reviewer at Cadence. However, this would not be the part of the published content on Cadence Online Support.</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Author_Region__c</fullName>
        <label>Publisher Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_s__c</fullName>
        <label>Author(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authoritative_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authoritative content is ranked higher in search results. Please mark this checked if you think this content is important and hence get high rank in search results page.</description>
        <inlineHelpText>Authoritative content is ranked higher in search results. Please mark this checked if you think this content is important and hence get high rank in search results page.</inlineHelpText>
        <label>Authoritative Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuthorsID__c</fullName>
        <label>AuthorsID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BlackList_AccountID__c</fullName>
        <description>BlackList_AccountID__c</description>
        <label>Access Account ID List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BlackList_Contact_ID__c</fullName>
        <label>Access Contact ID List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BlackList_Domain__c</fullName>
        <inlineHelpText>Enter comma separated domain.</inlineHelpText>
        <label>Access Domain List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Black_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blacklist__c</fullName>
        <label>Access list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCR</label>
        <referenceTo>CCR__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDN_Platform__c</fullName>
        <label>WP Cadence Platform</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Content_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Content URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_Open__c</fullName>
        <formula>$Label.Article_COS_Url + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COS Open</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Original_Date__c</fullName>
        <label>COS Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COS_Public_Date__c</fullName>
        <label>COS Public Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COS_Session_ID__c</fullName>
        <inlineHelpText>Stores the COS Session ID if the Article was submitted
			from COS</inlineHelpText>
        <label>COS Session ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CadenceCreationDate__c</fullName>
        <label>Cadence Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CadenceFolderPath__c</fullName>
        <label>Cadence Folder Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CadenceModifyDate__c</fullName>
        <label>Cadence Modify Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <formula>Product__r.Cadence_Platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cadence Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>Internal channel means the content is visible to Cadence employees only. Customer channel means that the content will be visible to customers and internal employees both.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloned_Attachment_Id__c</fullName>
        <label>Cloned Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Feed_Id__c</fullName>
        <label>Cloned Feed Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloned_Note_Id__c</fullName>
        <label>Cloned Note Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloned_record__c</fullName>
        <formula>IF(NOT(ISBLANK( cloned_article_Id__c )),HYPERLINK(&quot;/&quot;&amp;cloned_article_Id__c  , &quot;Click to go to the Cloned Record&quot;, &quot;_blank&quot;),null)</formula>
        <label>Cloned record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_EARs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close EARs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_EAR_Flag_Date__c</fullName>
        <label>Closed EAR Flag Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Creation_Date__c</fullName>
        <label>Date of submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Source__c</fullName>
        <label>Content Source</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreationDateWP__c</fullName>
        <label>Creation Date WP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crowd_Sourced_Search_Keywords__c</fullName>
        <description>This field will contain the searched keywords for case deflection</description>
        <inlineHelpText>The text here will be searchable from COS this field will not be visible on COS</inlineHelpText>
        <label>Crowd Sourced Search Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Specific_Published_Date__c</fullName>
        <label>Date Specific/Published Date</label>
        <picklist>
            <picklistValues>
                <fullName>On Specific date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Published date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_notification_sent__c</fullName>
        <label>Date of notification sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <inlineHelpText>Include a brief description explaining the error</inlineHelpText>
        <label>Definition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment__c</fullName>
        <label>Attachment Delete</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Topic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Topic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Author_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_category__c</fullName>
        <label>Document category</label>
        <picklist>
            <picklistValues>
                <fullName>Troubleshooting Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKILL Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Infm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category infm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Infm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation and Configuration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Document_types__c</fullName>
        <inlineHelpText>These are the document types which appear on the search results page as a filtering option. User can refine results using these document types.</inlineHelpText>
        <label>Document types</label>
        <picklist>
            <picklistValues>
                <fullName>Troubleshooting Article</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Application Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation, Licensing &amp; Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid Adoption Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Videos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-Training Bytes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-Course Datasheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Product Homepage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Examples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsite Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What&apos;s New</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Draft_Answer__c</fullName>
        <label>Draft Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Code__c</fullName>
        <label>Draft Code</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Definition__c</fullName>
        <label>Draft Definition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Error_Message__c</fullName>
        <label>Draft Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Example__c</fullName>
        <label>Draft Example</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Explanation_of_Script__c</fullName>
        <label>Draft Explanation of Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Draft_How_To__c</fullName>
        <label>Draft How To</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Problem__c</fullName>
        <label>Draft Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Solution__c</fullName>
        <label>Draft Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft_Status_Count__c</fullName>
        <label>Draft Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Usage__c</fullName>
        <label>Draft Usage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Editorial_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field specifies whether Editorial check is done by the Editor</inlineHelpText>
        <label>Editorial Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Link__c</fullName>
        <description>Field to generate the URL for Send Email button using the
			correct email template for the specific record type. This field
			should be hidden.</description>
        <formula>IF($RecordType.Name=&quot;Solution&quot;,
&quot;/email/author/emailauthor.jsp?retURL=&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;template_id=00Xd0000001AJ60&amp;p26=0D2d000000001GZ:noreply@cadence.com:noreply@cadence.com&quot;,
IF($RecordType.Name=&quot;Error Message&quot;,
&quot;/email/author/emailauthor.jsp?retURL=&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;template_id=00Xd0000001AJ5t&amp;p26=0D2d000000001GZ:noreply@cadence.com:noreply@cadence.com&quot;,
IF($RecordType.Name=&quot;How To&quot;,
&quot;/email/author/emailauthor.jsp?retURL=&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;template_id=00Xd0000001AJ5u&amp;p26=0D2d000000001GZ:noreply@cadence.com:noreply@cadence.com&quot;,
IF($RecordType.Name=&quot;Content publish&quot;,
&quot;/email/author/emailauthor.jsp?retURL=&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;template_id=00Xd0000001FNJ3&amp;p26=0D2d000000001GZ:noreply@cadence.com:noreply@cadence.com&quot;,
&quot;/email/author/emailauthor.jsp?retURL=&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;template_id=00Xd0000001AJ5z&amp;p26=0D2d000000001GZ:noreply@cadence.com:noreply@cadence.com&quot;))))</formula>
        <label>Email Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <inlineHelpText>Include the error identifier, e.g. (ENCOAX-591)</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <inlineHelpText>Provide an example or context when the user might
			experience this error</inlineHelpText>
        <label>Example</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>The Expiration date will be set to 2 years from the date of creation by default</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Script__c</fullName>
        <label>Explanation of Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Family__c</fullName>
        <formula>Product__r.External_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedName__c</fullName>
        <label>FeedName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Obsolete_Date__c</fullName>
        <label>First Obsolete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Publish_Date__c</fullName>
        <description>Date on which the article published first time</description>
        <label>First Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FolderStructurePath__c</fullName>
        <label>COS Content URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_To__c</fullName>
        <label>How To...</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InReview_Status_Count__c</fullName>
        <label>In Review Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAvailableOnGoogle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAvailableOnGoogle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMigrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KTeam__c</fullName>
        <description>This pulls the product KTeam onto the Article object so
			it can be used in List view filters.</description>
        <formula>TEXT(Product__r.K_Team__c)</formula>
        <label>KTeam</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launched_Article_Id__c</fullName>
        <label>Launched Article Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Record__c</fullName>
        <formula>IF(NOT(ISBLANK( Original_Article_Id__c )) &amp;&amp; ISBLANK( cloned_article_Id__c ) &amp;&amp; (ISPICKVAL(Status__c, &quot;Deleted&quot;) || CONTAINS(cloneid__c,&quot;:::clo&quot;)),HYPERLINK(&quot;/&quot;&amp;Original_Article_Id__c , &quot;Click to go to the Master Record&quot;, &quot;_blank&quot;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_date_of_publish__c</fullName>
        <label>Migrated date of publish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ModifiedByWp__c</fullName>
        <label>WP Modified By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifyDateWP__c</fullName>
        <label>Modify Date WP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need_Correction_Status_Count__c</fullName>
        <label>Needs Correction Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notification Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Date__c</fullName>
        <inlineHelpText>Notification about this content would be sent to users on/after this date.</inlineHelpText>
        <label>Notify Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <label>Notify User</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Specific date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On COS Visibility date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Obsolete_Status_Count__c</fullName>
        <label>Obsolete Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Article_Id__c</fullName>
        <label>Original Article Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Creation_Date__c</fullName>
        <label>Original Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <label>Owner Region</label>
        <picklist>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Microsite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this property if you want to set this article as home page for microsite. You will also require to associate users with this article so that microsite link gets visible on their login.</inlineHelpText>
        <label>Parent Microsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrevPublished_Article_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PrevPublished Article Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrevPublished_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prev Published Article</description>
        <label>PrevPublished Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Display_ArticleNew?id=&apos;+  Id + &apos;&amp;rType=&apos; +$RecordType.Name, &apos;Open&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousStatus__c</fullName>
        <label>PreviousStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Attachment__c</fullName>
        <label>Primary Attachment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductText__c</fullName>
        <description>Modified this from Product__c to something else</description>
        <label>Product (Text)</label>
        <length>1020</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Attribute</label>
        <referenceTo>Product_Attribute__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature2</label>
        <referenceTo>Prod_Cls_to_Feat_Jct__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Lvl_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature Level 1</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Product Feature Level 1 selected is not Active</errorMessage>
            <filterItems>
                <field>Product_Feature_Level_1__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <value>&apos;Migration&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_1__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Lvl_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CMC S-49137</description>
        <label>Product Feature Level 2</label>
        <referenceTo>Product_Feature_Level_2__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CMC S-49137</description>
        <label>Product Version</label>
        <referenceTo>Product_Feature_Version__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CMC S-49137</description>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Name</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Version_List__c</fullName>
        <label>Product Version List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to Product Class S-49137</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>The product selected is not an active product.</errorMessage>
            <filterItems>
                <field>Product_Class__c.Active_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <value>&apos;Migration&apos;</value>
            </filterItems>
            <filterItems>
                <field>$User.Article_Publisher__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Articles</relationshipLabel>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Status_Count__c</fullName>
        <label>Proposed Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <inlineHelpText>This date onwards the content will be visible on Cadence Online Support website.</inlineHelpText>
        <label>COS Visibility Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Published_Status_Count__c</fullName>
        <label>Published Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QueuedTask_Owner__c</fullName>
        <label>QueuedTask Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAK_License_Agreement__c</fullName>
        <label>RAK License Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Status_Count__c</fullName>
        <label>Rejected Status Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Used to store historic release info on old articles from
			Siebel.</description>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerID__c</fullName>
        <label>ReviewerID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, SolutionID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Saved_Answer__c</fullName>
        <label>Saved Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Code__c</fullName>
        <label>Saved Code</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Definition__c</fullName>
        <label>Saved Definition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Description__c</fullName>
        <label>Saved Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Error_Message__c</fullName>
        <label>Saved Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_Example__c</fullName>
        <label>Saved Example</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>